Stat Numbers for Pet displayed on screen

--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
     <img id="seal" src="seal1px.png" hidden alt="seal">
 </div>
 
+<p id="happy"></p>
+<p id="sad"></p>
+<p id="hungry"></p>
+<p id="thirsty"></p>
+<p id="healthy"></p>
+<p id="clean"></p>
 
 <div class="btnlayout">
     <button class="button1" type="button">Feed</button>
