--- a/index.html
+++ b/index.html
@@ -37,12 +37,14 @@
     <img id="seal" src="seal1px.png" hidden alt="seal">
 </div>
 
+<div id="statLevels">
 <p id="happy"></p>
 <p id="sad"></p>
 <p id="hungry"></p>
 <p id="thirsty"></p>
 <p id="healthy"></p>
 <p id="clean"></p>
+</div>
 
 <div class="btnlayout">
     <button class="button1" type="button">Feed</button>
@@ -56,7 +58,8 @@
 
 
 
-    <script src="app.js"></script>
+
+<script src="app.js"></script>
     
 </body>
 </html>
